--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,14 +557,14 @@ main {
 
 
 /**
- * #recenzie 
+ * #testimonials 
  */
 
-.recenzie { margin-bottom: 30px; }
+.testimonials { margin-bottom: 30px; }
 
-.recenzie-title { margin-bottom: 20px; }
+.testimonials-title { margin-bottom: 20px; }
 
-.recenzie-list {
+.testimonials-list {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -578,12 +578,12 @@ main {
   scroll-snap-type: inline mandatory;
 }
 
-.recenzie-item {
+.testimonials-item {
   min-width: 100%;
   scroll-snap-align: center;
 }
 
-.recenzie-avatar-box {
+.testimonials-avatar-box {
   position: absolute;
   top: 0;
   left: 0;
@@ -593,9 +593,9 @@ main {
   box-shadow: var(--shadow-1);
 }
 
-.recenzie-item-title { margin-bottom: 7px; }
+.testimonials-item-title { margin-bottom: 7px; }
 
-.recenzie-text {
+.testimonials-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
@@ -609,7 +609,7 @@ main {
 
 
 /**
- * #recenzie-modal
+ * #testimonials-modal
  */
 
 .modal-container {
@@ -655,7 +655,7 @@ main {
   pointer-events: all;
 }
 
-.recenzie-modal {
+.testimonials-modal {
   background: var(--eerie-black-2);
   position: relative;
   padding: 15px;
@@ -669,7 +669,7 @@ main {
   z-index: 2;
 }
 
-.modal-container.active .recenzie-modal {
+.modal-container.active .testimonials-modal {
   transform: scale(1);
   opacity: 1;
 }
@@ -1406,11 +1406,11 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .service-content-box { text-align: left; }
 
-  /* recenzie */
+  /* testimonials */
 
-  .recenzie-title { margin-bottom: 25px; }
+  .testimonials-title { margin-bottom: 25px; }
 
-  .recenzie-list {
+  .testimonials-list {
     gap: 30px;
     margin: 0 -30px;
     padding: 30px;
@@ -1422,28 +1422,28 @@ textarea.form-input::-webkit-resizer { display: none; }
     padding-top: 25px;
   }
 
-  .recenzie-avatar-box {
+  .testimonials-avatar-box {
     transform: translate(30px, -30px);
     border-radius: 20px;
   }
 
-  .recenzie-avatar-box img { width: 80px; }
+  .testimonials-avatar-box img { width: 80px; }
 
-  .recenzie-item-title {
+  .testimonials-item-title {
     margin-bottom: 10px;
     margin-left: 95px;
   }
 
-  .recenzie-text {
+  .testimonials-text {
     line-clamp: 2;
     -webkit-line-clamp: 2;
   }
 
-  /* recenzie modal */
+  /* testimonials modal */
 
   .modal-container { padding: 20px; }
 
-  .recenzie-modal {
+  .testimonials-modal {
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
@@ -1584,9 +1584,9 @@ textarea.form-input::-webkit-resizer { display: none; }
    * ABOUT
    */
 
-  /* recenzie modal */
+  /* testimonials modal */
 
-  .recenzie-modal {
+  .testimonials-modal {
     gap: 35px;
     max-width: 680px;
   }
@@ -1730,9 +1730,9 @@ textarea.form-input::-webkit-resizer { display: none; }
     gap: 20px 25px;
   }
 
-  /* recenzie */
+  /* testimonials */
 
-  .recenzie-item { min-width: calc(50% - 15px); }
+  .testimonials-item { min-width: calc(50% - 15px); }
 
   /* clients */
 
